--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -11,10 +11,15 @@
     --foreground-rgb: 255, 255, 255;
   }
 }
+html {
+  scroll-behavior: smooth;
+}
+
 
 body {
   color: rgb(var(--foreground-rgb));
   background-color: #0d1224;
+
 }
 
 #sticky-card-1 {
