--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -10,10 +10,38 @@
   :root {
     --foreground-rgb: 255, 255, 255;
   }
+
+
+  
 }
+
+
+// scrollbar
 html {
   scroll-behavior: smooth;
+
 }
+
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(120deg, #60a5fa, #00eb89,);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #0ebf8c;
+}
+
+
+
 
 
 body {
